# meta-refine

./: .gitignore  CHANGELOG.md  Dockerfile  Kaggle_Meta_Refine.ipynb  Makefile  PROJECT_SUMMARY.md  README.md  Simple_Colab_Test.ipynb  docker-compose.yml  env.example  meta_refine.py  pyproject.toml  requirements.txt  setup.py  test_cli.py
core/: config.py  formatter.py  model.py  utils.py
examples/: example.js  example.py  test_code.py
meta_refine_pkg/: __init__.py  cli.py  interactive.py
meta_refine_pkg/core/: __init__.py  analyzer.py  config.py  hf_inference_client.py  model.py  remote_client.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_utils.py
